# ShimGuard

./: .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
docs/: concepts.md  getting-started.md
docs/integrations/: ci.md
python/: .gitignore  README.md  pyproject.toml
python/examples/: README.md
python/examples/01-basic-verify/: verify.py
python/examples/02-ci-gate/: gate.py
python/examples/03-pattern-check/: pattern_check.py
python/src/shimguard/: __init__.py  cli.py  cli_lib.py  github.py  pattern_matcher.py  types.py  verifier.py
python/tests/: mock_client.py  test_cli.py  test_cli_lib.py  test_github.py  test_live_github.py  test_pattern_matcher.py  test_verifier.py
src/: cli-lib.ts  cli.ts  github.ts  index.ts  pattern-matcher.ts  types.ts  verifier.ts
test/: cli-lib.test.ts  cli.test.ts  github.test.ts  mock-client.ts  pattern-matcher.test.ts  verifier.test.ts
