[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shimguard-cli"
version = "0.1.0"
description = "Verify that a GitHub issue closed as \"fixed\" actually has a merged fix. Catches security issues marked fixed whose PR was never merged."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rudrendu Paul" },
  { name = "Sourav Nandy" },
]
keywords = ["security", "cli", "github", "issue-tracker", "verification", "supply-chain", "vulnerability-scanner", "agent-native"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "responses>=0.24,<1",
  "build>=1.0,<2",
  "twine>=5.0,<7",
]

[project.urls]
Homepage = "https://github.com/RudrenduPaul/ShimGuard"
Repository = "https://github.com/RudrenduPaul/ShimGuard"
"Bug Tracker" = "https://github.com/RudrenduPaul/ShimGuard/issues"
Changelog = "https://github.com/RudrenduPaul/ShimGuard/blob/main/CHANGELOG.md"
Documentation = "https://github.com/RudrenduPaul/ShimGuard/blob/main/docs/getting-started.md"
"Author - Rudrendu Paul" = "https://github.com/RudrenduPaul"
"Author - Sourav Nandy" = "https://github.com/Sourav-nandy-ai"

[project.scripts]
shimguard = "shimguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shimguard"]

[tool.hatch.build.targets.sdist]
include = [
  "src/shimguard",
  "tests",
  "README.md",
  "LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
